# Agrismart

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  response.json
docs/: remake-dataset.md  rice-leaf-disease.md
notebooks/: facenet.ipynb  statistics.ipynb  yolo.ipynb
src/agrismart/: __init__.py  dependencies.py  main.py
src/agrismart/backgrounds/: __init__.py  background_task.py  clean_session_background.py  sync_background.py
src/agrismart/decorators/: __init__.py  exception_decorator.py  response_decorator.py
src/agrismart/middlewares/: __init__.py  auth_middleware.py  role_middleware.py  tracing_middleware.py
src/agrismart/queues/: __init__.py
src/agrismart/queues/tasks/: notification.py
src/agrismart/routers/v1/: routes.py
src/agrismart/routers/v1/endpoints/: __init__.py  accounts.py  auth.py  diagnostics.py  medias.py  posts.py  roles.py
src/agrismart/routers/v2/: routes.py
src/benchmark/: __init__.py
src/dataset/: __init__.py  download.py  remake.py  show.py  statistics.py
src/training/: __init__.py  main.py  mediapipe.py  scratch.py
